# NBA-MVP-Likelihood-Investigator

./: .gitignore  LICENSE  README.md  pyproject.toml
data/processed/: Data_description.md  Processed_Stat.csv
data/raw/: Information.md  LeagueSchedule25_26.csv  Players.csv
src/groundwork/: preprocessing.ipynb
src/models/: forecast.ipynb
